--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "license": "UNLICENSED",
   "dependencies": {
     "@adobe/lit-mobx": "2.0.0",
+    "@hilla/form": "0.0.18",
+    "@hilla/frontend": "0.0.18",
     "@polymer/iron-icon": "3.0.1",
     "@polymer/iron-iconset-svg": "3.0.1",
     "@polymer/iron-list": "3.1.0",
@@ -117,7 +119,6 @@
     "@vaadin/virtual-list": "23.0.0",
     "@webcomponents/shadycss": "1.9.6",
     "construct-style-sheets-polyfill": "3.0.4",
-    "date-fns": "2.23.0",
     "line-awesome": "1.3.0",
     "lit": "2.1.4",
     "mobx": "^6.3.5"
@@ -127,26 +128,15 @@
     "@vaadin/build-status-plugin": "./target/plugins/build-status-plugin",
     "@vaadin/theme-live-reload-plugin": "./target/plugins/theme-live-reload-plugin",
     "@vaadin/theme-loader": "./target/plugins/theme-loader",
-    "chokidar": "^3.5.0",
-    "compression-webpack-plugin": "4.0.1",
-    "css-loader": "5.2.7",
-    "esbuild-loader": "2.15.1",
-    "extra-watch-webpack-plugin": "1.0.3",
-    "extract-loader": "5.1.0",
-    "file-loader": "6.2.0",
-    "fork-ts-checker-webpack-plugin": "6.2.1",
     "glob": "7.1.6",
-    "html-webpack-plugin": "4.5.1",
-    "lit-css-loader": "0.1.0",
-    "loader-utils": "2.0.0",
+    "mkdirp": "1.0.4",
+    "rollup-plugin-brotli": "3.1.0",
     "typescript": "4.5.3",
-    "webpack": "4.46.0",
-    "webpack-cli": "4.9.2",
-    "webpack-dev-server": "4.7.4",
-    "webpack-merge": "4.2.2",
+    "vite": "v2.8.0",
+    "vite-plugin-checker": "0.3.4",
+    "workbox-build": "6.4.2",
     "workbox-core": "6.4.2",
-    "workbox-precaching": "6.4.2",
-    "workbox-webpack-plugin": "6.4.2"
+    "workbox-precaching": "6.4.2"
   },
   "overrides": {
     "@vaadin/accordion": "$@vaadin/accordion",
@@ -174,11 +164,9 @@
     "@vaadin/icons": "$@vaadin/icons",
     "@vaadin/input-container": "$@vaadin/input-container",
     "@vaadin/integer-field": "$@vaadin/integer-field",
-    "@polymer/iron-a11y-announcer": "$@polymer/iron-a11y-announcer",
     "@polymer/iron-icon": "$@polymer/iron-icon",
     "@polymer/iron-iconset-svg": "$@polymer/iron-iconset-svg",
     "@polymer/iron-list": "$@polymer/iron-list",
-    "@polymer/iron-media-query": "$@polymer/iron-media-query",
     "@polymer/iron-meta": "$@polymer/iron-meta",
     "@polymer/iron-resizable-behavior": "$@polymer/iron-resizable-behavior",
     "@vaadin/item": "$@vaadin/item",
@@ -258,10 +246,23 @@
     "@vaadin/vaadin-cookie-consent": "$@vaadin/vaadin-cookie-consent",
     "@vaadin/vaadin-crud": "$@vaadin/vaadin-crud",
     "@vaadin/vaadin-grid-pro": "$@vaadin/vaadin-grid-pro",
-    "@vaadin/vaadin-rich-text-editor": "$@vaadin/vaadin-rich-text-editor"
+    "@vaadin/vaadin-rich-text-editor": "$@vaadin/vaadin-rich-text-editor",
+    "@vaadin/bundles": "$@vaadin/bundles",
+    "@vaadin/map": "$@vaadin/map",
+    "@adobe/lit-mobx": "$@adobe/lit-mobx",
+    "@polymer/polymer": "$@polymer/polymer",
+    "@vaadin/common-frontend": "$@vaadin/common-frontend",
+    "construct-style-sheets-polyfill": "$construct-style-sheets-polyfill",
+    "line-awesome": "$line-awesome",
+    "lit": "$lit",
+    "mobx": "$mobx",
+    "@hilla/form": "$@hilla/form",
+    "@hilla/frontend": "$@hilla/frontend"
   },
   "vaadin": {
     "dependencies": {
+      "@hilla/form": "0.0.18",
+      "@hilla/frontend": "0.0.18",
       "@polymer/iron-icon": "3.0.1",
       "@polymer/iron-iconset-svg": "3.0.1",
       "@polymer/iron-list": "3.1.0",
@@ -375,31 +376,19 @@
       "@vaadin/virtual-list": "23.0.0",
       "@webcomponents/shadycss": "1.9.6",
       "construct-style-sheets-polyfill": "3.0.4",
-      "date-fns": "2.23.0",
       "lit": "2.1.4"
     },
     "devDependencies": {
-      "chokidar": "^3.5.0",
-      "compression-webpack-plugin": "4.0.1",
-      "css-loader": "5.2.7",
-      "esbuild-loader": "2.15.1",
-      "extra-watch-webpack-plugin": "1.0.3",
-      "extract-loader": "5.1.0",
-      "file-loader": "6.2.0",
-      "fork-ts-checker-webpack-plugin": "6.2.1",
       "glob": "7.1.6",
-      "html-webpack-plugin": "4.5.1",
-      "lit-css-loader": "0.1.0",
-      "loader-utils": "2.0.0",
+      "mkdirp": "1.0.4",
+      "rollup-plugin-brotli": "3.1.0",
       "typescript": "4.5.3",
-      "webpack": "4.46.0",
-      "webpack-cli": "4.9.2",
-      "webpack-dev-server": "4.7.4",
-      "webpack-merge": "4.2.2",
+      "vite": "v2.8.0",
+      "vite-plugin-checker": "0.3.4",
+      "workbox-build": "6.4.2",
       "workbox-core": "6.4.2",
-      "workbox-precaching": "6.4.2",
-      "workbox-webpack-plugin": "6.4.2"
+      "workbox-precaching": "6.4.2"
     },
-    "hash": "a9484eec2e6f3ff6d8877162ea50b76ebd9097c0e6c87cfcca3c14038eda39db"
+    "hash": "70b1fc67ea7e0959099fa09baa960bf97da6c2c1c564555bc5904be9e039c83c"
   }
 }
